--- a/simple linear regression.ipynb
+++ b/simple linear regression.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataSet = pd.read_csv("Book1.csv")"
+    "dataSet = pd.read_csv(r\"C:\\Users\\SideEffect\\Documents\\Book1.csv\")"
    ]
   },
   {
